--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.16",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-moment": "^4.1.0",
