--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
   }
