--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,6 +8,8 @@ RUN npm run build
 
 # Step 2: Create Nginx Server
 FROM nginx:stable-alpine as production-stage
+COPY docker/nginx.conf /etc/nginx/nginx.conf
+
 COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
